unityうぃ開いた時のtempフォルダを無視

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ OnlineTutorial~Photon~/Logs/
 OnlineTutorial~Photon~/Packages/
 OnlineTutorial~Photon~/.vscode/
 OnlineTutorial~Photon~/Assets/Photon Unity Networking/Demos/
+OnlineTutorial~Photon~/Temp/
