AssetStore以下を無視。
AssetStoreからダウンロードしたものはこちらに移し、リソースを鯖に挙げないようにする。

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ OnlineTutorial~Photon~/Packages/
 OnlineTutorial~Photon~/.vscode/
 OnlineTutorial~Photon~/Assets/Photon Unity Networking/Demos/
 OnlineTutorial~Photon~/Temp/
+OnlineTutorial~Photon~/Assets/AssetStore/
+OnlineTutorial~Photon~/Assets/AssetStore.meta
