Exe以下を無視

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ OnlineTutorial~Photon~/Assets/Photon Unity Networking/Demos/
 OnlineTutorial~Photon~/Temp/
 OnlineTutorial~Photon~/Assets/AssetStore/
 OnlineTutorial~Photon~/Assets/AssetStore.meta
+OnlineTutorial~Photon~/exe/
